--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -53,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "id": "b9ce8e67",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
+      "\n",
+      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "samples_df, participants_df = collect_data(\n",
     "    # Enter the name of your workspace \n",
@@ -80,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -88,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cnv figs directory already exists: /Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/preprocess_data/cnv_fig\n"
+      "Loading existing review session Reviewer.pkl...\n"
      ]
     }
    ],
@@ -97,16 +108,16 @@
     "\n",
     "reviewer.set_review_data(\n",
     "    # Enter the file path where you would like your pkl file of your review data to be stored\n",
-    "    review_data_fn='/Users/svanseters/Broad/JupyterReviewer/Reviewer.pkl',\n",
+    "    review_data_fn='Reviewer.pkl',\n",
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
-    "    df=pd.read_csv(f'/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/participants.txt', sep='\\t').set_index('participant_id'),\n",
-    "    preprocess_data_dir = '/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/preprocess_data',\n",
-    "    samples_fn='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/samples.txt'\n",
+    "    df=pd.read_csv('../../example_notebooks/example_data/participants.txt', sep='\\t').set_index('participant_id'),\n",
+    "    preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data',\n",
+    "    samples_fn='../../example_notebooks/example_data/samples.txt'\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app(biospecimens_fn='/Users/svanseters/Broad/JupyterReviewer/biospecimens.7oqli.tsv', samples_fn='/Users/svanseters/Broad/JupyterReviewer/example_notebooks/example_data/samples.txt', preprocess_data_dir = '/Users/svanseters/Broad/JupyterReviewer/preprocess_data', drivers_fn='drivers.csv')\n",
+    "reviewer.set_review_app(biospecimens_fn='/Users/svanseters/Broad/JupyterReviewer/biospecimens.7oqli.tsv', samples_fn='../../example_notebooks/example_data/samples.txt', preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data', drivers_fn='drivers.csv')\n",
     "reviewer.set_default_review_data_annotations_configuration()\n",
     "reviewer.set_default_autofill()\n"
    ]
@@ -185,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "id": "ee299041",
    "metadata": {},
    "outputs": [
@@ -194,6 +205,16 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://0.0.0.0:8086/\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
+      "\n",
+      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
+      "\n"
      ]
     }
    ],
