--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -21,14 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "b4bb095f",
    "metadata": {},
    "outputs": [],
    "source": [
     "from JupyterReviewer.Reviewers.PatientReviewer import PatientReviewer\n",
     "from JupyterReviewer.Reviewers.PatientReviewer import collect_data\n",
-    "from JupyterReviewer.ReviewData import ReviewDataAnnotation\n",
+    "from JupyterReviewer.Data import DataAnnotation\n",
     "from JupyterReviewer.ReviewDataApp import AppComponent\n",
     "\n",
     "import pandas as pd\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -99,25 +99,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading existing review session Reviewer.pkl...\n"
+      "cnv figs directory already exists: ../../example_notebooks/example_data/preprocess_data/cnv_fig\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/ReviewData.py:38: UserWarning:\n",
+      "\n",
+      "Loading existing data pkl file\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "reviewer = PatientReviewer()\n",
-    "\n",
     "reviewer.set_review_data(\n",
     "    # Enter the file path where you would like your pkl file of your review data to be stored\n",
-    "    review_data_fn='Reviewer.pkl',\n",
+    "    data_pkl_fn='../../Reviewer.pkl',\n",
     "    # Breifly describe the source of your data and its purpose\n",
     "    description='first review',\n",
     "    # Enter the file path to your data to be reviewed\n",
-    "    df=pd.read_csv('../../example_notebooks/example_data/participants.txt', sep='\\t').set_index('participant_id'),\n",
-    "    preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data',\n",
-    "    samples_fn='../../example_notebooks/example_data/samples.txt'\n",
+    "    participant_df=pd.read_csv('../../example_notebooks/example_data/participants.txt', sep='\\t').set_index('participant_id'),\n",
+    "    sample_df=pd.read_csv('../../example_notebooks/example_data/samples.txt', sep='\\t'),\n",
+    "    preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data'\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app(biospecimens_fn='/Users/svanseters/Broad/JupyterReviewer/biospecimens.7oqli.tsv', samples_fn='../../example_notebooks/example_data/samples.txt', preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data', drivers_fn='drivers.csv')\n",
+    "reviewer.set_review_app(samples_fn='../../example_notebooks/example_data/samples.txt', preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data', drivers_fn='drivers.csv')\n",
     "reviewer.set_default_review_data_annotations_configuration()\n",
     "reviewer.set_default_autofill()\n"
    ]
@@ -196,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "id": "ee299041",
    "metadata": {},
    "outputs": [
@@ -205,20 +214,6 @@
      "output_type": "stream",
      "text": [
       "Dash app running on http://0.0.0.0:8086/\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
-      "\n",
-      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
-      "\n",
-      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
-      "\n",
-      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
-      "\n"
      ]
     }
    ],
