--- a/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
+++ b/JupyterReviewer/Reviewers/UserPatientReviewer.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "b9ce8e67",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "id": "e496d5e4",
    "metadata": {},
    "outputs": [
@@ -100,6 +100,16 @@
      "output_type": "stream",
      "text": [
       "cnv figs directory already exists: ../../example_notebooks/example_data/preprocess_data/cnv_fig\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/svanseters/Broad/JupyterReviewer/JupyterReviewer/ReviewData.py:38: UserWarning:\n",
+      "\n",
+      "Loading existing data pkl file\n",
+      "\n"
      ]
     }
    ],
@@ -116,7 +126,7 @@
     "    preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data'\n",
     ")\n",
     "\n",
-    "reviewer.set_review_app(preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data', drivers_fn='drivers.csv')\n",
+    "reviewer.set_review_app(preprocess_data_dir = '../../example_notebooks/example_data/preprocess_data', drivers_fn='drivers.csv', participant_cols=list(participants_df), sample_cols=list(samples_df))\n",
     "reviewer.set_default_review_data_annotations_configuration()\n",
     "reviewer.set_default_autofill()\n"
    ]
@@ -210,6 +220,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
+      "\n",
+      "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
+      "\n",
       "/Users/svanseters/Broad/JupyterReviewer/reviewEnv/lib/python3.9/site-packages/google/auth/_default.py:79: UserWarning:\n",
       "\n",
       "Your application has authenticated using end user credentials from Google Cloud SDK without a quota project. You might receive a \"quota exceeded\" or \"API not enabled\" error. We recommend you rerun `gcloud auth application-default login` and make sure a quota project is added. Or you can use service accounts instead. For more information about service accounts, see https://cloud.google.com/docs/authentication/\n",
